--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -36,6 +36,7 @@
 		"build:web": "vite build",
 		"build:mcp-welcome": "cross-env VITE_BUILD_TARGET=mcp-welcome vite build",
 		"dev": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js",
+		"dev:vite": "vite dev",
 		"dev:stdio": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/stdio.js",
 		"dev:sse": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/sse.js",
 		"dev:json": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js --json",
