--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -53,8 +53,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@huggingface/hub": "^2.1.0",
 		"@llmindset/hf-mcp": "workspace:^",
+		"@mcp-ui/server": "^5.10.0",
 		"@modelcontextprotocol/sdk": "^1.11.2",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
