--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "hf-mcp",
 	"private": true,
-	"version": "0.2.30",
+	"version": "9.2.30",
 	"type": "module",
 	"packageManager": "pnpm@10.15.1",
 	"scripts": {
 		"dev": "concurrently \"pnpm run --filter=@llmindset/hf-mcp dev\" \"pnpm run --filter=@llmindset/hf-mcp-server dev\"",
 		"dev:sse": "concurrently \"pnpm run --filter=@llmindset/hf-mcp dev\" \"pnpm run --filter=@llmindset/hf-mcp-server dev:sse\"",
 		"dev:json": "concurrently \"pnpm run --filter=@llmindset/hf-mcp dev\" \"pnpm run --filter=@llmindset/hf-mcp-server dev:json\"",
+		"dev:watch": "concurrently \"pnpm run --filter=@llmindset/hf-mcp dev\" \"pnpm run --filter=@llmindset/hf-mcp-server dev:watch\"",
 		"dev:stdio": "concurrently \"pnpm run --filter=@llmindset/hf-mcp dev\" \"pnpm run --filter=@llmindset/hf-mcp-server dev:stdio\"",
 		"start": "cd packages/app && pnpm start",
 		"start:json": "cd packages/app && pnpm start:json",
