--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@llmindset/hf-mcp-server",
-	"version": "0.2.30",
+	"version": "9.11.30",
 	"description": "Official Hugging Face MCP Server",
 	"type": "module",
 	"main": "./dist/server/streamableHttp.js",
@@ -31,16 +31,18 @@
 		"url": "https://github.com/evalstate/hf-mcp-server/issues"
 	},
 	"scripts": {
-		"build": "pnpm run build:server && pnpm run build:web && pnpm run build:mcp-welcome",
+		"build": "pnpm run build:server && pnpm run build:web && pnpm run build:singlefiles",
 		"build:server": "tsc -p tsconfig.server.json",
 		"build:web": "vite build",
+		"build:singlefiles": "pnpm run build:mcp-welcome && pnpm run build:gradio-widget",
 		"build:mcp-welcome": "cross-env VITE_BUILD_TARGET=mcp-welcome vite build",
+		"build:gradio-widget": "cross-env VITE_BUILD_TARGET=gradio-widget vite build && node scripts/html-to-ts.js",
 		"dev": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js",
 		"dev:vite": "vite dev",
 		"dev:stdio": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/stdio.js",
 		"dev:sse": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/sse.js",
 		"dev:json": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js --json",
-		"dev:watch": "concurrently \"tsc -p tsconfig.server.json --watch\" \"vite build --watch\" \"nodemon dist/server/streamableHttp.js\"",
+		"dev:watch": "concurrently \"tsc -p tsconfig.server.json --watch\" \"vite build --watch\" \"nodemon dist/server/streamableHttp.js --json\"",
 		"start": "cross-env NODE_ENV=production node dist/server/streamableHttp.js",
 		"start:json": "cross-env NODE_ENV=production node dist/server/streamableHttp.js --json",
 		"start:stdio": "cross-env NODE_ENV=production node dist/server/stdio.js",
@@ -56,7 +58,7 @@
 		"@llmindset/hf-mcp": "workspace:^",
 		"@huggingface/hub": "^2.1.0",
 		"@mcp-ui/server": "^5.10.0",
-		"@modelcontextprotocol/sdk": "^1.18.2",
+		"@modelcontextprotocol/sdk": "^1.20.0",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.4",
