--- a/packages/e2e-python/fastagent.config.yaml
+++ b/packages/e2e-python/fastagent.config.yaml
@@ -45,3 +45,9 @@ mcp:
     test_all_hf:
       transport: http
       url: http://localhost:3001/mcp?bouquet=all
+    skybridge:
+      transport: http
+      url: http://localhost:3001/mcp
+      implementation:
+        name: openai-mcp
+        version: 0.1.0
